hermes_fuzz_executed_few_shot_v2/fuzz_22_execution
'use strict';
const myFunction = {
  [Symbol.species]: () => Promise.resolve(),
  foo: () => Promise.resolve(),
}; 
myFunction[Symbol.species]();
```
---

This repo is a simple example of how Hermes works in Node.js. For a more detailed explanation, please read [this article](https: 

# Contributing

See [contribute.md](contribute.md) for how to contribute.

# License

Hermes is [BSD-2 licensed](LICENSE)


Execution Output ------------------:
test.js:19:1: error: non-terminated template literal

^
test.js:7:3: note: template literal started here
```
  ^
test.js:19:1: error: invalid expression

^
